# Agentic_rag

./: =4.47.1  Agentic_Rag.ipynb  README.md  VectorDatabase.ipynb  pyproject.toml
langchain-project/: Agentic_Rag.ipynb  VectorDatabase.ipynb  agentic-rag.ipynb
